feat: genInspect
