# src/api/common/handleFile.ts
@@ -6,17 +6,17 @@ const diskStorage = _diskStorage({
     callback(null, path.join("/app/dist/public/"));
   },
   filename: async (req, file, callback) => {
-    const officeId = req.body.officeId;
     const math = ["application/pdf"];
-    if (math.indexOf(file.mimetype) === -1) {
+    if (math.indexOf(file.mimetype) == -1) {
       const errorMess = new Error(
-        `The file <strong>${file.originalname}</strong> is invalid. Only allowed to upload image jpeg or png.`
+        `The file <strong>${file.originalname}</strong> is invalid. Only allowed to upload pdf.`
       );
       return callback(errorMess, "");
     }
-    const filename = `${Date.now()}.${officeId}.pdf`;
-    req.body.filename = filename;
-    callback(null, filename);
+    console.log({ file });
+    const filename = `${Date.now()}.${file.originalname}.pdf`;
+    console.log(filename);
+    callback(new Error("fuck"), filename);
   },
 });
 export const uploadFile = multer({ storage: diskStorage }).single("file");
